Add a AppValidator for validating the request
